# recipe_agent

./: .env.example  .gitignore  Dockerfile  README.md  create_requirements_file.py  docker-compose.yml  pyproject.toml  requirements.txt  start.sh
data/: RecipeWebAppIcon.kra  tool_config.yaml
src/recipe_agent/: __init__.py  bot.py  chat_history.py  nextcloud.py  nextcloud_webdav.py  ollama_chat.py  openrouter_chat.py  recipe.py  recipe_config.py  utils.py  web_app.py
src/recipe_agent/agents/: chat_agent.py  recipe_agent.py  search_agent.py
src/recipe_agent/io/: cookbook_api.py  nextcloud.py  nextcloud_webdav.py
src/recipe_agent/tools/: duckducktool.py  tool_config_loader.py  tool_decorator.py  tool_manager.py
templates/: index.html
test/: conftest.py  t_bot.py  t_cookbook_api.py  t_duckduckgo.py  t_nextcloud.py  t_playground.py  t_recipe.py  t_recipe_type.py  t_utils.py  test_nextcloud_webdav.py
test/data/input/: mcp_config.json
