[project]
name = "recipe_agent"
version = "0.1.1"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "crawl4ai>=0.6.3",
    "dotenv>=0.9.9",
    "linkpreview>=0.11.0",
    "pydantic>=2.10.6",
    "python-telegram-bot==22.2",
    "tornado>=6.5.1",
]

[project.scripts]
bot = "recipe_agent.bot:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = ["src/recipe_agent"]

[tool.hatch.build.targets.wheel]
include = ["src/recipe_agent"]

[tool.hatch.build.targets.wheel.sources]
"src/recipe_agent" = "recipe_agent"

[tool.pytest.ini_options]
log_cli="True"
log_cli_level="DEBUG"
asyncio_default_fixture_loop_scope="module"

[dependency-groups]
dev = [
    "black>=25.1.0",
    "pipreqs>=0.5.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=1.0.0",
]
